Adding Ubuntu common problem